<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('event_peserta', function (Blueprint $table) {
            $table->id();
            $table->foreignId('event_id')->constrained('events')->onDelete('cascade');
            $table->foreignId('peserta_id')->constrained('peserta')->onDelete('cascade');
            $table->string('qr_code')->unique();
            $table->boolean('status_aktif')->default(true);
            $table->timestamps();

            $table->index('event_id');
            $table->index('peserta_id');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('event_peserta');
    }
};
