// Database Markup Language (DBML)
// Use this code at https://dbdiagram.io to generate an ERD

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  email_verified_at timestamp
  password varchar
  role enum [note: 'super_admin, panitia, peserta']
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar
  created_at timestamp
}

Table sessions {
  id varchar [pk]
  user_id bigint
  ip_address varchar
  user_agent text
  payload longtext
  last_activity int
}

Table cache {
  key varchar [pk]
  value mediumtext
  expiration int
}

Table cache_locks {
  key varchar [pk]
  owner varchar
  expiration int
}

Table jobs {
  id bigint [pk, increment]
  queue varchar
  payload longtext
  attempts tinyint
  reserved_at int
  available_at int
  created_at int
}

Table job_batches {
  id varchar [pk]
  name varchar
  total_jobs int
  pending_jobs int
  failed_jobs int
  failed_job_ids longtext
  options mediumtext
  cancelled_at int
  created_at int
  finished_at int
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar [unique]
  connection text
  queue text
  payload longtext
  exception longtext
  failed_at timestamp
}

Table peserta {
  id bigint [pk, increment]
  user_id bigint [not null]
  nama_lengkap text
  email varchar
  no_hp varchar
  unit_kerja varchar
  foto varchar
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table events {
  id bigint [pk, increment]
  created_by bigint
  nama_event varchar
  tanggal_mulai date
  tanggal_selesai date
  lokasi varchar
  deskripsi text
  status enum [note: 'persiapan, berlangsung, selesai']
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table event_sesi {
  id bigint [pk, increment]
  event_id bigint [not null]
  nama_sesi varchar
  urutan int
  created_at timestamp
  updated_at timestamp
}

Table event_peserta {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  qr_code varchar [unique]
  status_aktif bool
  created_at timestamp
  updated_at timestamp
}

Table event_panitia {
  id bigint [pk, increment]
  event_id bigint [not null]
  user_id bigint [not null]
  akses enum [note: 'owner, viewer']
  created_at timestamp
  updated_at timestamp
}

Table soal {
  id bigint [pk, increment]
  event_id bigint [not null]
  tipe enum [note: 'pretest, posttest']
  teks_soal text
  urutan int
  created_at timestamp
  updated_at timestamp
}

Table pilihan_jawaban {
  id bigint [pk, increment]
  soal_id bigint [not null]
  huruf enum [note: 'A, B, C, D']
  teks_pilihan text
  is_correct bool
  created_at timestamp
  updated_at timestamp
}

Table sesi_tes {
  id bigint [pk, increment]
  event_id bigint [not null]
  tipe enum [note: 'pretest, posttest']
  waktu_mulai timestamp
  waktu_selesai timestamp
  durasi_menit int
  status enum [note: 'belum_buka, aktif, tutup']
  created_at timestamp
  updated_at timestamp
}

Table jawaban_peserta {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  soal_id bigint [not null]
  pilihan_id bigint [not null]
  is_correct bool
  created_at timestamp
  updated_at timestamp
}

Table absensi {
  id bigint [pk, increment]
  event_id bigint [not null]
  sesi_id bigint [not null]
  peserta_id bigint [not null]
  waktu_scan timestamp
  scanned_by bigint [not null]
  created_at timestamp
  updated_at timestamp
}

Table afektif_sub_aspek {
  id bigint [pk, increment]
  event_id bigint [not null]
  nama_sub_aspek varchar
  sesi_id bigint
  urutan int
  status enum [note: 'belum_buka, aktif, tutup']
  created_at timestamp
  updated_at timestamp
}

Table afektif_butir {
  id bigint [pk, increment]
  sub_aspek_id bigint [not null]
  teks_pernyataan text
  is_positif bool
  urutan int
  created_at timestamp
  updated_at timestamp
}

Table afektif_jawaban {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  sub_aspek_id bigint [not null]
  butir_id bigint [not null]
  jawaban enum [note: 'SS, S, TS, STS']
  skor int
  created_at timestamp
  updated_at timestamp
}

Table psikomotor_template {
  id bigint [pk, increment]
  event_id bigint [not null]
  jenis enum [note: 'outbound, ibadah']
  nama_aspek varchar
  skor_maks int
  created_at timestamp
  updated_at timestamp
}

Table psikomotor_nilai {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  template_id bigint [not null]
  skor int
  dinilai_oleh bigint [not null]
  created_at timestamp
  updated_at timestamp
}

Table angket_item {
  id bigint [pk, increment]
  event_id bigint [not null]
  kategori enum [note: 'A, B, C, D, E, F, G, H, I']
  teks_item text
  urutan int
  created_at timestamp
  updated_at timestamp
}

Table angket_jawaban {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  item_id bigint [not null]
  jawaban enum [note: 'A, B, C, D']
  created_at timestamp
  updated_at timestamp
}

Table angket_komentar {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  komentar text
  created_at timestamp
  updated_at timestamp
}

Table ahp_bobot {
  id bigint [pk, increment]
  event_id bigint [not null]
  matriks json
  bobot_c1 decimal
  bobot_c2 decimal
  bobot_c3 decimal
  bobot_c4 decimal
  bobot_c5 decimal
  cr_value decimal
  is_consistent bool
  created_at timestamp
  updated_at timestamp
}

Table penilaian_akhir {
  id bigint [pk, increment]
  event_id bigint [not null]
  peserta_id bigint [not null]
  nilai_pretest decimal
  nilai_posttest decimal
  nilai_afektif decimal
  nilai_psikomotor decimal
  nilai_kehadiran decimal
  skor_saw decimal
  ranking int
  predikat enum [note: 'Amat Baik, Baik, Cukup, Kurang']
  status_kelulusan varchar
  created_at timestamp
  updated_at timestamp
}

Table activity_logs {
  id bigint [pk, increment]
  user_id bigint
  action varchar
  model_type varchar
  model_id bigint
  description text
  ip_address varchar
  created_at timestamp
  updated_at timestamp
}

Table system_settings {
  id bigint [pk, increment]
  key varchar [unique]
  value text
  created_at timestamp
  updated_at timestamp
}

// Relationships
Ref: sessions.user_id > users.id
Ref: peserta.user_id > users.id
Ref: events.created_by > users.id
Ref: event_sesi.event_id > events.id
Ref: event_peserta.event_id > events.id
Ref: event_peserta.peserta_id > peserta.id
Ref: event_panitia.event_id > events.id
Ref: event_panitia.user_id > users.id
Ref: soal.event_id > events.id
Ref: pilihan_jawaban.soal_id > soal.id
Ref: sesi_tes.event_id > events.id
Ref: jawaban_peserta.event_id > events.id
Ref: jawaban_peserta.peserta_id > peserta.id
Ref: jawaban_peserta.soal_id > soal.id
Ref: jawaban_peserta.pilihan_id > pilihan_jawaban.id
Ref: absensi.event_id > events.id
Ref: absensi.sesi_id > event_sesi.id
Ref: absensi.peserta_id > peserta.id
Ref: absensi.scanned_by > users.id
Ref: afektif_sub_aspek.event_id > events.id
Ref: afektif_sub_aspek.sesi_id > event_sesi.id
Ref: afektif_butir.sub_aspek_id > afektif_sub_aspek.id
Ref: afektif_jawaban.event_id > events.id
Ref: afektif_jawaban.peserta_id > peserta.id
Ref: afektif_jawaban.sub_aspek_id > afektif_sub_aspek.id
Ref: afektif_jawaban.butir_id > afektif_butir.id
Ref: psikomotor_template.event_id > events.id
Ref: psikomotor_nilai.event_id > events.id
Ref: psikomotor_nilai.peserta_id > peserta.id
Ref: psikomotor_nilai.template_id > psikomotor_template.id
Ref: psikomotor_nilai.dinilai_oleh > users.id
Ref: angket_item.event_id > events.id
Ref: angket_jawaban.event_id > events.id
Ref: angket_jawaban.peserta_id > peserta.id
Ref: angket_jawaban.item_id > angket_item.id
Ref: angket_komentar.event_id > events.id
Ref: angket_komentar.peserta_id > peserta.id
Ref: ahp_bobot.event_id > events.id
Ref: penilaian_akhir.event_id > events.id
Ref: penilaian_akhir.peserta_id > peserta.id
Ref: activity_logs.user_id > users.id
